# emitfy-python

./: GENERATED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
emitfy/: __init__.py
emitfy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: should-publish.mjs
