[project]
name = "emitfy"
version = "0.2.2"
description = "Official Emitfy API SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emitfy" }]
keywords = ["emitfy", "nfe", "nfse", "fiscal", "brazil", "sdk"]
dependencies = []

[project.urls]
Homepage = "https://api.emitfy.com/docs/sdks"
Documentation = "https://api.emitfy.com/docs"
Repository = "https://github.com/emitfy/emitfy-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["emitfy*"]
