[project]
name = "emitfy"
version = "0.3.0"
description = "Official Emitfy API SDK for Python (OpenAPI-typed)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emitfy" }]
keywords = ["emitfy", "nfe", "nfse", "fiscal", "brazil", "sdk", "openapi"]
dependencies = [
  "urllib3>=2.0.0",
  "python-dateutil>=2.8.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://api.emitfy.com/docs/sdks"
Documentation = "https://api.emitfy.com/docs"
Repository = "https://github.com/emitfy/emitfy-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["emitfy*"]
